--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <p>The box is now {{ isOpen ? 'Open' : 'Closed' }}!</p>
   </div>
   <div class="top">
-    <h3>Click the button to change its color!</h3>
+    <h3>Click the button to change its color..!</h3>
     <button (click)="toggleIsCorrect()" [@toggleClick]="isGreen">Toggle Me!</button>
   </div>
 </div>
